--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -7,7 +7,7 @@
                   <li class="menu-title">
                       <span>Main</span>
                   </li>
-                  <li class="submenu" [ngClass]="{ 'active' : urlComplete.mainUrl === 'dashboard' }">
+                  <li class="submenu" [ngClass]="{ 'active' : urlComplete.mainUrl === 'main' }">
                       <a href="javascript:" [ngClass]="{ 'subdrop' : urlComplete.mainUrl === 'dashboard' }">
                           <i class="la la-dashboard"></i>
                           <span>Dashboard</span>
@@ -38,27 +38,26 @@
                               </a>
                               <ul style="display: none;"
                                   [ngStyle]="{ 'display' : urlComplete.subUrl === 'calls' ? 'block' : 'none' }">
-                                  <li routerLink="/apps/calls/voice">
+                                  <li>
                                       <a [ngClass]="{ 'active' : urlComplete.childUrl === 'voice' }"
                                           href="javascript:">Voice Call</a>
                                   </li>
-                                  <li routerLink="/apps/calls/video">
+                                  <li>
                                       <a [ngClass]="{ 'active' : urlComplete.childUrl === 'video' }"
                                           href="javascript:">Video Call</a>
                                   </li>
-                                  <li routerLink="/apps/calls/outgoing">
+                                  <li>
                                       <a [ngClass]="{ 'active' : urlComplete.childUrl === 'outgoing' }"
                                           href="javascript:">Outgoing Call</a>
                                   </li>
-                                  <li routerLink="/apps/calls/incoming">
+                                  <li>
                                       <a [ngClass]="{ 'active' : urlComplete.childUrl === 'incoming' }"
                                           href="javascript:">Incoming Call</a>
                                   </li>
                               </ul>
                           </li>
-                          <li routerLink="/apps/calendar">
-                              <a href="javascript:"
-                                  [ngClass]="{ 'active' : urlComplete.subUrl === 'calendar' }">Calendar</a>
+                          <li>
+                              <a [ngClass]="{ 'active' : urlComplete.subUrl === 'calendar' }">Calendar</a>
                           </li>
                           <li routerLink="/apps/contacts">
                               <a href="javascript:"
@@ -114,8 +113,7 @@
                                       class="badge badge-pill bg-primary float-right">1</span></a>
                           </li>
                           <li routerLink="/employees/employeeleaves">
-                              <a href="javascript:"
-                                  [ngClass]="{ 'active' : urlComplete.subUrl === 'employeeleaves'}">Leaves
+                              <a [ngClass]="{ 'active' : urlComplete.subUrl === 'employeeleaves'}">Leaves
                                   (Employee)</a>
                           </li>
                           <li routerLink="/employees/leavesettings">
@@ -151,8 +149,9 @@
                       </ul>
                   </li>
                   <li [ngClass]="{ 'active' : urlComplete.subUrl === 'clientspage' || urlComplete.subUrl === 'clientslist' }">
-                      <a routerLink="/clients/clientspage" ><i
-                              class="la la-users"></i> <span>Clients</span></a>
+                      <a>
+                        <i class="la la-users"></i> <span>Clients</span>
+                      </a>
                   </li>
                   <li class="submenu" [ngClass]="{ 'active' : urlComplete.mainUrl === 'projects' || urlComplete.subUrl === 'projectlist'|| urlComplete.subUrl === 'projectview' }">
                       <a href="javascript:" [ngClass]="{ 'subdrop' : urlComplete.mainUrl === 'projects' || urlComplete.subUrl === 'projectlist'|| urlComplete.subUrl === 'projectview' }"href="javascript:"><i class="la la-rocket"></i> <span> Projects</span> <span
