--- a/src/app/component/payments/payments.component.html
+++ b/src/app/component/payments/payments.component.html
@@ -1,1 +1,53 @@
-<p>payments works!</p>
+
+  <div class="card card-table flex-fill">
+      <div class="card-header">
+          <h3 class="card-title mb-0">Payments</h3>
+      </div>
+      <div class="card-body">
+          <div class="table-responsive">
+              <table class="table custom-table table-nowrap mb-0">
+                  <thead>
+                      <tr>
+                          <th>Invoice ID</th>
+                          <th>Client</th>
+                          <th>Payment Type</th>
+                          <th>Paid Date</th>
+                          <th>Paid Amount</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td><a routerLink="/accounts/invoice-view">#INV-0001</a></td>
+                          <td>
+                              <h2><a>Global Technologies</a></h2>
+                          </td>
+                          <td>Paypal</td>
+                          <td>11 Mar 2019</td>
+                          <td>$380</td>
+                      </tr>
+                      <tr>
+                          <td><a routerLink="/accounts/invoice-view">#INV-0002</a></td>
+                          <td>
+                              <h2><a>Delta Infotech</a></h2>
+                          </td>
+                          <td>Paypal</td>
+                          <td>8 Feb 2019</td>
+                          <td>$500</td>
+                      </tr>
+                      <tr>
+                          <td><a routerLink="/accounts/invoice-view">#INV-0003</a></td>
+                          <td>
+                              <h2><a>Cream Inc</a></h2>
+                          </td>
+                          <td>Paypal</td>
+                          <td>23 Jan 2019</td>
+                          <td>$60</td>
+                      </tr>
+                  </tbody>
+              </table>
+          </div>
+      </div>
+      <div class="card-footer">
+          <a href="payments.html">View all payments</a>
+      </div>
+  </div>
