--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -320,8 +320,13 @@
                                 <tr>
                                     <td>
                                         <h2 class="table-avatar">
-                                            <a routerLink="/employees/employeeprofile" class="avatar"><img alt="" src="assets/img/profiles/avatar-05.jpg"></a>
-                                            <a routerLink="/employees/employeeprofile">Barry Cuda <span>CEO</span></a>
+                                            <a routerLink="/main/component/profile" class="avatar">
+                                                <img alt="" src="assets/img/profiles/avatar-05.jpg">
+                                            </a>
+                                            <a routerLink="/main/component/profile">
+                                              Barry Cuda
+                                              <span>CEO</span>
+                                            </a>
                                         </h2>
                                     </td>
                                     <td>barrycuda@example.com</td>
