--- a/src/app/component/input/input.component.html
+++ b/src/app/component/input/input.component.html
@@ -45,6 +45,11 @@
         </div>
     </div>
     <div class="staff-msg">
-        <a class="btn btn-custom" routerLink="index">Send
-          Message</a></div>
+        <a class="btn btn-custom" routerLink="index">Send Message</a>
+    </div>
+
+    <div class="staff-msg">
+        <a class="btn btn-custom" (click)="add()">Pop Up</a>
+    </div>
+
 </div>
