--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,5 +1,6 @@
 <app-nav></app-nav>
 <app-header></app-header>
 <div class="page-wrapper" (resized)="onResize($event)" [ngStyle]="{ 'height' : innerHeight }">
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+    <div kendoDialogContainer></div>
 </div>
