--- a/src/app/component/input/input.component.html
+++ b/src/app/component/input/input.component.html
@@ -43,7 +43,14 @@
             <input type="text" class="form-control floating" (input)="searchName($event)">
             <label class="focus-label">Employee Name</label>
         </div>
-
+        <div class="col-xs-12 col-sm-6 col-lg-3 example-col">
+            <p>Outline Button</p>
+            <p class="k-block">
+                <button kendoButton look="outline">Browse</button>
+                <button kendoButton icon="folder" look="outline">Browse</button>
+                <button kendoButton icon="folder" look="outline"></button>
+            </p>
+        </div>
 
 
     </div>
