--- a/src/app/component/input/input.component.html
+++ b/src/app/component/input/input.component.html
@@ -36,30 +36,80 @@
             <label class="focus-label">Leave Type</label>
         </div>
 
-    </div>
+        <button class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00">
+          <span class="k-icon k-i-login"></span>
+          <span style="margin-left: 5px;">Login</span>
+        </button>
 
-    <div class="col-md-5 d-flex">
-        <div class="form-group form-focus">
-            <input type="text" class="form-control floating" (input)="searchName($event)">
-            <label class="focus-label">Employee Name</label>
+        <div class="staff-msg">
+          <a class="btn btn-custom" routerLink="index">Send Message</a>
         </div>
-        <div class="col-xs-12 col-sm-6 col-lg-3 example-col">
-            <p>Outline Button</p>
-            <p class="k-block">
-                <button kendoButton look="outline">Browse</button>
-                <button kendoButton icon="folder" look="outline">Browse</button>
-                <button kendoButton icon="folder" look="outline"></button>
-            </p>
+        <div class="staff-msg">
+            <a class="btn btn-custom" (click)="add()">Pop Up</a>
         </div>
 
-
-    </div>
-    <div class="staff-msg">
-        <a class="btn btn-custom" routerLink="index">Send Message</a>
     </div>
 
-    <div class="staff-msg">
-        <a class="btn btn-custom" (click)="add()">Pop Up</a>
+    <div class="col-md-5 d-flex" style = "background: white;">
+        <div class="form-group" style = "margin-top: 20px;">
+          <input type="text" class="form-control floating" (input)="searchName($event)">
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-12">
+              <label>Name</label>
+              <input type="text" [ngClass]="input? 'active-input' : ''" class="form-control" [(ngModel)]="input" placeholder="Name">
+              <div class="in_box">
+                  <button type="button" [ngClass]="input? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+              </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Select</label>
+          <select class="select floating form-control" [ngClass]="selected? 'active-input' : ''" (change)="selectChangeHandler($event)">
+            <option> -- Select -- </option>
+            <option>Casual Leave</option>
+            <option>Medical Leave</option>
+            <option>Loss of Pay</option>
+        </select>
+      </div>
+
+    </div>
+
+
+    <div class="col-md-6 d-flex" style = "background: white;">
+<!-- Kendo update -->
+<div class="form-row">
+  <div class="form-group form-group-last col-md-12">
+      <label class="font-khmer-cursive">File</label>
+
+      <kendo-fileselect
+      [restrictions]="fileRestrictions"
+      [multiple] = "false"
+      class="font-khmer-cursive kendo-fileselect-t"
+      (select)="selectEventHandler($event)"
+              #myFileSelect="kendoFileSelect">
+              <ng-template kendoFileSelectFileTemplate let-files let-state="state">
+                  <div class="font-khmer-cursive">Name: {{files[0].name}} <strong class="chipe-00">Size: {{files[0].size}} bytes</strong></div>
+                  <button [ngClass]="{right0px: imageUploaded == true}" class="k-button"  style="position: absolute; right: 6.2em; height: 30px;" *ngIf="showButton(state)"  kendoButton (click)="remove(myFileSelect, files[0].uid)" [attr.icon]="'x'" [attr.look]="'outline'">Remove</button>
+                  <button *ngIf="!imageUploaded" class="k-button"  style="position: absolute; right: .2em; height: 30px;"  kendoButton (click)="upload(files[0].uid);" [attr.icon]="'upload'" [attr.look]="'outline'">Upload</button>
+              </ng-template>
+      </kendo-fileselect>
+
+
+      <div *ngIf="imagePreviews.length" class="img-preview example-config">
+          <h3 class="font-khmer-cursive">Preview selected images</h3>
+          <img *ngFor="let image of imagePreviews"
+          [src]="image.src"
+          alt="image preview"
+          style="width: 200px; margin: 10px;" />
+      </div>
+
+
+  </div>
+</div>
+
     </div>
 
 </div>
