change styles.css for login component

--- a/src/app/component/popup/popup.component.html
+++ b/src/app/component/popup/popup.component.html
@@ -29,12 +29,12 @@
 
 
         <div class="c_btn">
-          <button (click)="close()" class="k-button btn-w100px-h35px font-khmer-cursive"  kendoButton [attr.look]="'outline'">
+          <button (click)="close()" class="k-button btn-w100px-h35px font-khmer-cursive button-close"  kendoButton [attr.look]="'outline'">
             <span class="k-icon k-i-close-circle k-i-x-circle margin-top-1px font-size-20px"></span>
-            <span class="margin-top-5px margin-left-5px">Close</span>
+            <span class="margin-top-2px">Close</span>
           </button>
 
-          <button class="k-button btn-w100px-h35px font-khmer-cursive"  kendoButton [attr.look]="'outline'">
+          <button class="k-button btn-w100px-h35px font-khmer-cursive button-save"  kendoButton [attr.look]="'outline'">
               <span class="k-icon k-i-download margin-top-1px font-size-20px"></span>
               <span class="margin-top-5px margin-left-5px">Save</span>
           </button>
