--- a/src/styles.css
+++ b/src/styles.css
@@ -15322,3 +15322,59 @@ button {
 .active-input {
   border-bottom: 2px solid #0026b0 !important;
 }
+
+
+.login-box, .register-box {
+  width: 360px;
+  margin: 7% auto;
+
+}
+
+.login-box-body, .register-box-body {
+  border-radius: 1px;
+  box-shadow: 0 3px 5px rgb(78 113 182 / 26%);
+  background: #fff;
+  padding: 20px;
+  border-top: 0;
+  color: #666;
+}
+
+.login-logo, .register-logo {
+  font-size: 35px;
+  text-align: center;
+  margin-bottom: 25px;
+  font-weight: 300;
+}
+
+.login-logo a, .register-logo a {
+  color: #444;
+}
+
+.login-page, .register-page {
+  height: auto;
+  background: #d2d6de;
+}
+
+.login-box-msg, .register-box-msg {
+  margin: 0;
+  text-align: center;
+  padding: 0 20px 20px 20px;
+}
+
+.k-upload-button {
+    border: none !important;
+}
+
+.button-close span:nth-child(1) {
+  margin-right: 5px;
+}
+
+.button-close span:nth-child(2) {
+  margin-top: 2px;
+}
+
+
+.button-save span:nth-child(1) {
+  margin-right: 5px;
+}
+
