--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -24,7 +24,7 @@
                        <span style="margin: 0px 1px 0px 5px;" class="font-khmer-cursive">Remember Me</span>
                   </label>
 
-                <button style ="margin-right: 0;" class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00 l" (click) ="Login()">
+                <button style ="margin-right: 0;" class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00 l" (click) ="login()">
                     <span class="k-icon k-i-login"></span>
                     <span style="margin-left: 5px;">{{'Login.Button.Login' | translate}}</span>
                 </button>
